Cookies banner - alignment fix

--- a/upscale-global-consent/upscale-global-consent.scss
+++ b/upscale-global-consent/upscale-global-consent.scss
@@ -1,8 +1,9 @@
 :host {
     width: 100vw;
     max-width: unset;
-    position: relative;
-    top: 310px;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 
 .content {
